# sales-analyser

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/api/routers/: reports.py  save.py  upload.py
backend/app/api/services/: clean_data.py
backend/app/core/: database.py
backend/tests/: test_reports.py  test_save.py  test_upload.py
